--- a/VulnHub/.obsidian/workspace
+++ b/VulnHub/.obsidian/workspace
@@ -9,8 +9,8 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "Breach-2_final2.1/Breach-2_final2.1.md",
-            "mode": "preview"
+            "file": "LemonSqueezy/LemonSqueezy.md",
+            "mode": "source"
           }
         }
       }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "Breach-2_final2.1/Breach-2_final2.1.md",
+                "file": "LemonSqueezy/LemonSqueezy.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "459c61f48a577e7b",
   "lastOpenFiles": [
+    "LemonSqueezy/LemonSqueezy.md",
+    "LemonSqueezy/15 - Privesc.md",
+    "LemonSqueezy/10 - WebServices.md",
+    "LemonSqueezy/Untitled.md",
+    "Pasted image 20210507180436.png",
+    "LemonSqueezy/10 - Wordpress.md",
+    "LemonSqueezy/05 - Ports Scan & Enumeration.md",
     "Breach-2_final2.1/Breach-2_final2.1.md",
     "Breach-2_final2.1/25 - Privesc.md",
-    "Breach-2_final2.1/15 - mysql injection.md",
-    "Breach-2_final2.1/10 - Web Service.md",
-    "Breach-2_final2.1/05 - Ports Scan & Enumeration.md",
-    "Breach-2_final2.1/Untitled.md",
-    "Breach-2_final2.1/20 - XSS.md",
-    "Untitled.md",
-    "Breach1/Breach1.md",
-    "Pasted image 20210422114134.png.md"
+    "Breach-2_final2.1/15 - mysql injection.md"
   ]
 }
