--- a/VulnHub/.obsidian/workspace
+++ b/VulnHub/.obsidian/workspace
@@ -9,7 +9,7 @@
         "state": {
           "type": "markdown",
           "state": {
-            "file": "LemonSqueezy/LemonSqueezy.md",
+            "file": "Healthcare/10 - OpenEMR.md",
             "mode": "source"
           }
         }
@@ -68,7 +68,7 @@
             "state": {
               "type": "backlink",
               "state": {
-                "file": "LemonSqueezy/LemonSqueezy.md",
+                "file": "Healthcare/10 - OpenEMR.md",
                 "collapseAll": false,
                 "extraContext": false,
                 "sortOrder": "alphabetical",
@@ -88,15 +88,15 @@
   },
   "active": "459c61f48a577e7b",
   "lastOpenFiles": [
+    "Healthcare/10 - OpenEMR.md",
+    "Healthcare/15 - Privesc.md",
+    "Healthcare/Pasted image 20210511114426.png",
+    "Healthcare/Untitled.md",
+    "Healthcare/05 - Ports Scan & Enumeration.md",
+    "Healthcare/Pasted image 20210510113213.png",
     "LemonSqueezy/LemonSqueezy.md",
     "LemonSqueezy/15 - Privesc.md",
     "LemonSqueezy/10 - WebServices.md",
-    "LemonSqueezy/Untitled.md",
-    "Pasted image 20210507180436.png",
-    "LemonSqueezy/10 - Wordpress.md",
-    "LemonSqueezy/05 - Ports Scan & Enumeration.md",
-    "Breach-2_final2.1/Breach-2_final2.1.md",
-    "Breach-2_final2.1/25 - Privesc.md",
-    "Breach-2_final2.1/15 - mysql injection.md"
+    "LemonSqueezy/Untitled.md"
   ]
 }
